--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Vingle Design System for Product Register Solution",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "author": "",
@@ -15,15 +17,28 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.0",
     "@eslint/js": "^9.32.0",
-    "@vitejs/plugin-react": "^4.7.0",
+    "@storybook/addon-a11y": "^9.1.1",
+    "@storybook/addon-docs": "^9.1.1",
+    "@storybook/addon-onboarding": "^9.1.1",
+    "@storybook/addon-vitest": "^9.1.1",
+    "@storybook/react-vite": "^9.1.1",
     "@types/node": "^20.0.0",
+    "@types/react": "^19.1.9",
+    "@vitejs/plugin-react": "^4.7.0",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.32.0",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-storybook": "^9.1.1",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
+    "playwright": "^1.54.2",
+    "storybook": "^9.1.1",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "vitest": "^3.2.4"
   }
 }
