--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "build": "vite build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.7.0",
   "dependencies": {
+    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
@@ -20,23 +22,33 @@
     "@chromatic-com/storybook": "^4.1.0",
     "@eslint/js": "^9.32.0",
     "@storybook/addon-a11y": "^9.1.1",
+    "@storybook/addon-actions": "^9.0.8",
     "@storybook/addon-docs": "^9.1.1",
     "@storybook/addon-onboarding": "^9.1.1",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-vitest": "^9.1.1",
+    "@storybook/builder-vite": "^9.1.1",
     "@storybook/react-vite": "^9.1.1",
     "@types/node": "^20.0.0",
     "@types/react": "^19.1.9",
     "@vitejs/plugin-react": "^4.7.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "autoprefixer": "^10.4.21",
     "chromatic": "^13.1.3",
+    "cssnano": "^7.1.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-storybook": "^9.1.1",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
     "playwright": "^1.54.2",
+    "postcss-load-config": "^6.0.1",
+    "postcss-scss": "^4.0.9",
+    "prettier": "^3.6.2",
     "storybook": "^9.1.1",
+    "storybook-css-modules": "^1.0.8",
+    "stylelint": "^16.23.1",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.0.6",
