--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "storybook": "^9.1.1",
     "storybook-css-modules": "^1.0.8",
     "stylelint": "^16.23.1",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.0.6",
