--- a/package.json
+++ b/package.json
@@ -2,12 +2,35 @@
   "name": "@vingle-team/design-system",
   "version": "0.0.1",
   "description": "Vingle Design System for Product Register Solution",
-  "main": "index.js",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./styles": {
+      "import": "./dist/styles/index.css",
+      "require": "./dist/styles/index.css"
+    }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "sideEffects": [
+    "**/*.css"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build": "vite build"
+    "build": "vite build",
+    "build:types": "tsc --project tsconfig.build.json",
+    "prepublishOnly": "npm run build && npm run build:types"
   },
   "keywords": [],
   "author": "",
